# kenall

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: unit-test-ci.yml
kenall/: base_row.py  parser.py  row.py  util.py
tests/: test_000_compile.py  test_002_region_split.py  test_003_hankaku_zenkaku.py  test_101_normal.py  test_102_ikanikisaiganaibaai.py  test_103_build.py  test_104_other.py  test_105_chome.py  test_106_banchi.py  test_107_chiwari.py  test_108_ichien.py  test_109_subtown_basic.py  test_110_multiline.py  test_111_notuginibanchigakurubaai.py  test_201_pr-2-and-3.py  util.py
